--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "@types/lodash": "^4.14.62",
+    "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
+    "mdi": "^1.9.33",
+    "ng2-materialize": "^1.3.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
@@ -35,9 +39,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
