--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.4.0",
     "@types/lodash": "^4.14.62",
     "angular-in-memory-web-api": "^0.3.1",
+    "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
     "mdi": "^1.9.33",
     "ng2-materialize": "^1.3.2",
