--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "mdi": "^1.9.33",
     "ng2-materialize": "^1.3.2",
+    "ng2-order-pipe": "^0.1.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
