--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "@types/lodash": "^4.14.62",
+    "ag-grid": "^9.1.0",
+    "ag-grid-angular": "^9.1.0",
     "angular-in-memory-web-api": "^0.3.1",
     "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "mdi": "^1.9.33",
     "ng2-materialize": "^1.3.2",
     "ng2-order-pipe": "^0.1.4",
