--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mdi": "^1.9.33",
+    "ng2-filter-pipe": "^0.1.8",
     "ng2-materialize": "^1.3.2",
     "ng2-order-pipe": "^0.1.4",
     "rxjs": "^5.1.0",
